fix: marker color when dark mode in homepage

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -113,3 +113,7 @@ button {
 .list-position-outside > li::marker {
   color: #9ca3af;
 }
+
+.dark .list-position-outside > li::marker {
+  color: #6b7280;
+}
